--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/CSNW/d3.chart.csnw.line-bar/issues"
   },
-  "homepage": "https://github.com/CSNW/d3.chart.csnw.line-bar"
+  "homepage": "https://github.com/CSNW/d3.chart.csnw.line-bar",
+  "license": "MIT"
 }
