Add .less compilation

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-concat-sourcemap": "~0.4.1",
     "grunt-es6-module-transpiler": "~0.6.0",
     "load-grunt-config": "~0.8.0-beta.1",
-    "jshint": "~2.4.4"
+    "jshint": "~2.4.4",
+    "grunt-contrib-less": "~0.11.0"
   }
 }
