--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "load-grunt-config": "~0.8.0-beta.1",
     "jshint": "~2.4.4",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jasmine": "~0.6.3"
   }
 }
