--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "d3.chart.csnw.line-bar",
   "main": "d3.chart.csnw.line-bar.js",
-  "version": "0.0.0",
+  "version": "0.5.0",
   "homepage": "https://github.com/CSNW/d3.chart.csnw.line-bar",
   "authors": [
     "CSNW",
@@ -17,13 +17,24 @@
   ],
   "private": true,
   "dependencies": {
+    "d3": "~3.4.4",
     "d3.chart": "~0.2.0",
-    "underscore": "~1.6.0",
-    "d3": "~3.4.4"
+    "underscore": "~1.6.0"
   },
   "license": "MIT",
   "devDependencies": {
     "jquery": "~2.1.0",
     "jasmine-jquery": "~2.0.3"
-  }
+  },
+  "ignore": [
+    "src",
+    "specs",
+    "example",
+    "tasks",
+    "package.json",
+    "Gruntfile.js",
+    ".gitattributes",
+    ".gitignore",
+    ".jshintrc"
+  ]
 }
