--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "load-grunt-config": "~0.8.0-beta.1",
     "jshint": "~2.4.4",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jasmine": "~0.6.3"
+    "grunt-contrib-jasmine": "~0.6.3",
+    "grunt-contrib-connect": "~0.7.1"
   }
 }
