--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 name: d3.chart.multi
 baseurl: /d3.chart.multi
 url: http://csnw.github.io/d3.chart.multi
+github: https://github.com/csnw/d3.chart.multi
+
+# TODO Load from package.json
+version: 0.8.3
 
 exclude:
 - Gemfile
