--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,18 @@ baseurl: /d3.chart.multi
 url: http://csnw.github.io/d3.chart.multi
 github: https://github.com/csnw/d3.chart.multi
 
-# TODO Load from package.json
+# TODO Load from package.json/bower.json
 version: 0.8.3
+dependencies:
+- name: D3.js
+  link: "http://d3js.org/"
+  version: ">= 3.0.0"
+- name: d3.chart
+  link: "http://misoproject.com/d3-chart/"
+  version: ">= 0.2.0"
+- name: Underscore.js
+  link: "http://underscorejs.org/"
+  version: ">= 1.5.0"
 
 exclude:
 - Gemfile
