Refactor dimensions and container width/height

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,9 +1,8 @@
 {
   "browser": true,
   "node": true,
-  "devel": true,
-  "debug": true,
   "validthis": true,
   "sub": true,
-  "laxbreak": true
+  "laxbreak": true,
+  "eqnull": true
 }
