--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "d3-chart multi",
   "main": "dist/d3.chart.multi.js",
   "scripts": {
-    "test": "grunt test",
-    "lint": "jshint src"
+    "build": "node -e \"require('grunt').tasks(['build']);\"",
+    "jshint": "node -e \"require('grunt').tasks(['jshint']);\"",
+    "release": "node -e \"require('grunt').tasks(['release']);\"",
+    "test": "node -e \"require('grunt').tasks(['test']);\"",
+    "debug": "node -e \"require('grunt').tasks(['debug']);\""
   },
   "repository": {
     "type": "git",
@@ -24,15 +27,14 @@
   "homepage": "https://github.com/CSNW/d3.chart.multi",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.4",
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-copy": "~0.8.0",
+    "grunt-contrib-jasmine": "~0.8.2",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-jshint": "~0.9.2",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "load-grunt-config": "~0.8.0-beta.1",
-    "jshint": "~2.4.4",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jasmine": "~0.6.3",
-    "grunt-contrib-connect": "~0.7.1"
+    "load-grunt-config": "~0.16.0"
   }
 }
