--- a/_tasks/package.json
+++ b/_tasks/package.json
@@ -2,7 +2,7 @@
   "name": "tasks",
   "description": "Scripts for publishing d3.chart.multi",
   "scripts": {
-    "dependencies": "uglifyjs ../js/jquery-2.1.3.js ../js/bootstrap.js ../js/underscore.js ../js/backbone.js ../js/d3.js ../js/d3.chart.js -o ../js/dependencies.min.js --source-map ../js/dependencies.min.js.map"
+    "vendor": "uglifyjs ../js/vendor/jquery-2.1.3.js ../js/vendor/bootstrap.js ../js/vendor/underscore.js ../js/vendor/backbone.js ../js/vendor/d3.js ../js/vendor/d3.chart.js -o ../js/vendor.min.js --source-map ../js/vendor.min.js.map"
   },
   "devDependencies": {
     "uglify-js": "~2.4.16"
