Ignore node_modules in jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ exclude:
 - Gemfile
 - Gemfile.lock
 - README.md
+- bower_components
+- node_modules
+- tmp
 
 highlighter: pygments
 markdown: redcarpet
