Move tasks to Gruntfile

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@ bower_components
 .grunt
 specs/index.html
 npm-debug.log
-example/data
 tmp/
 
 _site/
 .sass-cache
+_tasks/
 
 # OS Junk
 Thumbs.db
