--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-jshint": "~0.11.0",
     "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
-    "load-grunt-tasks": "~3.1.0"
+    "load-grunt-tasks": "~3.1.0",
+    "semver": "~4.3.1"
   }
 }
