--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~3.1.0",
-    "semver": "~4.3.1"
+    "semver": "~4.3.1",
+    "grunt-zip": "~0.16.2"
   }
 }
