--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~3.1.0",
     "semver": "~4.3.1",
-    "grunt-zip": "~0.16.2"
+    "grunt-zip": "~0.16.2",
+    "async": "~0.9.0"
   }
 }
