--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "load-grunt-tasks": "~3.1.0",
     "semver": "~4.3.1",
     "grunt-zip": "~0.16.2",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "request": "~2.53.0",
+    "inquirer": "~0.8.0"
   }
 }
