--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-name: d3.chart.multi
-baseurl: /d3.chart.multi
-url: http://csnw.github.io/d3.chart.multi
-github: https://github.com/csnw/d3.chart.multi
+name: d3.compose
+baseurl: /d3.compose
+url: http://csnw.github.io/d3.compose
+github: https://github.com/csnw/d3.compose
 
 # TODO Load from package.json/bower.json
-version: 0.10.0
+version: 0.12.14
 
 exclude:
 - Gemfile
