--- a/_tasks/package.json
+++ b/_tasks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tasks",
-  "description": "Scripts for publishing d3.chart.multi",
+  "description": "Scripts for publishing d3.compose",
   "scripts": {
     "vendor": "uglifyjs ../js/vendor/jquery-2.1.3.js ../js/vendor/bootstrap.js ../js/vendor/underscore.js ../js/vendor/backbone.js ../js/vendor/d3.js ../js/vendor/d3.chart.js ../js/vendor/highlight.pack.js -o ../js/vendor.min.js --source-map ../js/vendor.min.js.map"
   },
