--- a/_tasks/package.json
+++ b/_tasks/package.json
@@ -2,9 +2,12 @@
   "name": "tasks",
   "description": "Scripts for publishing d3.compose",
   "scripts": {
-    "vendor": "uglifyjs ../js/vendor/jquery-2.1.3.js ../js/vendor/bootstrap.js ../js/vendor/underscore.js ../js/vendor/backbone.js ../js/vendor/d3.js ../js/vendor/d3.chart.js ../js/vendor/highlight.pack.js -o ../js/vendor.min.js --source-map ../js/vendor.min.js.map"
+    "vendor": "node vendor.js",
+    "docs": "node docs.js"
   },
   "devDependencies": {
-    "uglify-js": "~2.4.16"
+    "uglify-js": "~2.4.16",
+    "js-yaml": "~3.3.1",
+    "lodash": "~3.9.2"
   }
 }
