--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
   "private": true,
   "dependencies": {
     "d3": "~3",
-    "d3.chart": "~0",
-    "underscore": "~1"
+    "d3.chart": "~0"
   },
   "license": "MIT",
   "devDependencies": {
