--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "d3.compose",
   "version": "0.13.6",
-  "description": "d3.compose",
+  "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
   "main": "dist/d3.compose.js",
   "scripts": {
-    "build": "node -e \"require('grunt').tasks(['build']);\"",
+    "build": "gulp build",
+    "dist": "gulp dist",
     "jshint": "node -e \"require('grunt').tasks(['jshint']);\"",
     "release": "node -e \"require('grunt').tasks(['release']);\"",
     "test": "node -e \"require('grunt').tasks(['test']);\"",
@@ -30,6 +31,8 @@
   "license": "MIT",
   "devDependencies": {
     "async": "~0.9.0",
+    "del": "^1.2.0",
+    "esperanto": "^0.7.3",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.9.0",
@@ -39,9 +42,23 @@
     "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-zip": "~0.16.2",
+    "gulp": "^3.9.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-file": "^0.2.0",
+    "gulp-header": "^1.2.2",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "inquirer": "~0.8.0",
     "load-grunt-tasks": "~3.1.0",
+    "object-assign": "^3.0.0",
     "request": "~2.53.0",
-    "semver": "~4.3.1"
+    "run-sequence": "^1.1.2",
+    "semver": "~4.3.1",
+    "through2": "^2.0.0",
+    "vinyl-sourcemaps-apply": "^0.1.4"
   }
 }
