--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d3.compose",
-  "version": "0.13.6",
+  "version": "0.14.0",
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
   "main": "dist/d3.compose.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "gulp",
     "build": "gulp build",
     "serve": "gulp serve",
-    "release": "gulp release && node -e \"require('grunt').tasks(['release']);\"",
+    "release": "node -e \"require('grunt').tasks(['prerelease']);\" && gulp release && node -e \"require('grunt').tasks(['release']);\"",
     "docs": "yuidoc && node -e \"require('grunt').tasks(['docs']);\""
   },
   "repository": {
