--- a/_data/package.json
+++ b/_data/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d3.compose",
-  "version": "0.15.6",
+  "version": "0.15.7",
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
   "main": "dist/d3.compose.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "d3",
     "d3.chart",
     "d3-chart",
-    "compose"
+    "compose",
+    "chart"
   ],
   "author": "CSNW",
   "bugs": {
@@ -46,7 +47,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.15.0",
     "gulp-grunt": "^0.5.2",
-    "gulp-header": "^1.2.2",
+    "gulp-header": "^1.7.1",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
