--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "devDependencies": {
     "async": "~0.9.0",
     "del": "^1.2.0",
-    "esperanto": "^0.7.5",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.9.0",
@@ -58,6 +57,7 @@
     "load-grunt-tasks": "~3.1.0",
     "object-assign": "^3.0.0",
     "request": "~2.53.0",
+    "rollup": "^0.20.3",
     "run-sequence": "^1.1.2",
     "semver": "~4.3.1",
     "through2": "^2.0.0",
