--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "homepage": "https://github.com/CSNW/d3.compose",
   "license": "MIT",
+  "dependencies": {
+    "d3": "^3.5.8",
+    "d3.chart": "^0.2.1"
+  },
   "devDependencies": {
     "async": "~0.9.0",
     "del": "^1.2.0",
@@ -54,6 +58,8 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "inquirer": "~0.8.0",
+    "jasmine-jquery": "^2.1.1",
+    "jquery": "^2.1.4",
     "load-grunt-tasks": "~3.1.0",
     "object-assign": "^3.0.0",
     "request": "~2.53.0",
