--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-eslint": "^0.15.0",
     "gulp-grunt": "^0.5.2",
     "gulp-header": "^1.7.1",
+    "gulp-load-plugins": "^1.1.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
