--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
   "main": "dist/d3.compose.js",
   "scripts": {
-    "test": "gulp test",
+    "test": "SET NODE_ENV=test&& mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
+    "test:watch": "npm test -- --watch",
     "dev": "gulp",
     "build": "gulp build",
     "serve": "gulp serve",
@@ -35,7 +36,10 @@
   },
   "devDependencies": {
     "async": "~0.9.0",
+    "babel-core": "^6.2.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
     "del": "^1.2.0",
+    "expect": "^1.13.0",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.9.0",
@@ -62,7 +66,9 @@
     "inquirer": "~0.8.0",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^2.1.4",
+    "jsdom": "^7.1.1",
     "load-grunt-tasks": "~3.1.0",
+    "mocha": "^2.3.4",
     "request": "~2.53.0",
     "run-sequence": "^1.1.2",
     "semver": "~4.3.1"
