--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:watch": "gulp build:watch",
     "examples": "gulp serve",
     "preversion": "npm run check",
-    "postversion": "npm run build:dist && gulp version:bower"
+    "version": "npm run build:dist && gulp version:bower && git add -A",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -55,6 +56,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-zip": "~0.16.2",
     "gulp": "^3.9.0",
+    "gulp-bump": "^1.0.0",
     "gulp-header": "^1.7.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-plumber": "^1.0.1",
