--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "examples": "gulp serve",
     "preversion": "npm run check",
     "version": "npm run build:dist && gulp version:bower && git add -A",
-    "postversion": "git push && git push --tags"
+    "postversion": "git push && git push --tags",
+    "postpublish": "gulp publish:github"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
     "babel-core": "^6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
     "expect": "^1.13.0",
+    "github": "^0.2.4",
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.9.0",
@@ -66,6 +68,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
+    "gulp-zip": "^3.0.2",
     "inquirer": "~0.8.0",
     "jquery": "^2.1.4",
     "jsdom": "^7.1.1",
