--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build": "gulp build:tmp",
     "build:dist": "gulp build:dist",
     "build:watch": "gulp build:watch",
-    "examples": "gulp serve",
     "docs": "rimraf _docs && yuidoc && gulp docs",
     "preversion": "npm run check",
     "version": "npm run build:dist && gulp version:bower && git add -A",
@@ -45,21 +44,13 @@
     "d3.chart": "^0.2.1"
   },
   "devDependencies": {
-    "async": "~0.9.0",
     "babel-core": "^6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
     "expect": "^1.13.0",
     "github": "^0.2.4",
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-uglify": "~0.8.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-zip": "~0.16.2",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
+    "gulp-copy": "0.0.2",
     "gulp-header": "^1.7.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-plumber": "^1.0.1",
@@ -73,13 +64,10 @@
     "inquirer": "~0.8.0",
     "jquery": "^2.1.4",
     "jsdom": "^7.1.1",
-    "load-grunt-tasks": "~3.1.0",
     "mocha": "^2.3.4",
-    "request": "~2.53.0",
     "rimraf": "^2.4.4",
     "rollup": "^0.21.1",
     "run-sequence": "^1.1.2",
-    "semver": "~4.3.1",
     "yuidocjs": "^0.9.0"
   }
 }
