--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "expect": "^1.13.0",
     "github": "^0.2.4",
     "gulp": "^3.9.0",
@@ -66,7 +67,7 @@
     "jsdom": "^7.1.1",
     "mocha": "^2.3.4",
     "rimraf": "^2.4.4",
-    "rollup": "^0.21.1",
+    "rollup-plugin-babel": "^2.3.9",
     "run-sequence": "^1.1.2",
     "yuidocjs": "^0.9.0"
   }
