--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "extends": "defaults",
   "ecmaFeatures": {
     "arrowFunctions": true,
     "blockBindings": true,
@@ -9,23 +10,10 @@
     "spread": true,
     "templateStrings": true
   },
-  "rules": {
-    "camelcase": [0],
-    "consistent-return": [0],
-    "curly": [0],
-    "dot-notation": [2, {"allowKeywords": false}],
-    "eqeqeq": [0],
-    "quotes": [1, "single"],
-    "no-underscore-dangle": [0],
-    "no-use-before-define": [2, "nofunc"]
-  },
   "env": {
     "browser": true,
     "node": true,
-    "amd": true,
+    "es6": true,
     "mocha": true
-  },
-  "globals": {
-    "d3": true
   }
 }
