--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "babel-core": "^6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "eslint": "^1.10.3",
+    "eslint-config-defaults": "^8.0.2",
     "expect": "^1.13.0",
     "github": "^0.2.4",
     "gulp": "^3.9.0",
