Remove module transpilation in tests

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "d3.compose",
   "version": "0.15.15",
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
-  "main": "build/d3.compose.js",
+  "main": "build/d3.compose-all.js",
   "scripts": {
     "clean": "gulp clean:tmp",
     "lint": "eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
-    "test": "SET NODE_ENV=test&& mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
+    "test": "mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
     "check": "npm run lint && npm run test",
     "build": "gulp build:tmp",
@@ -53,7 +53,6 @@
     "babel-plugin-transform-es2015-destructuring": "^6.4.0",
     "babel-plugin-transform-es2015-function-name": "^6.4.0",
     "babel-plugin-transform-es2015-literals": "^6.3.13",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.3.13",
     "babel-plugin-transform-es2015-parameters": "^6.4.5",
     "babel-plugin-transform-es2015-shorthand-properties": "^6.3.13",
     "babel-plugin-transform-es2015-template-literals": "^6.3.13",
