--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,14 @@
-{
-  "extends": "defaults",
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "blockBindings": true,
-    "classes": false,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": false,
-    "generators": false,
-    "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": false,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "spread": true,
-    "superInFunctions": false,
-    "templateStrings": true
-  },
-  "rules": {
-    "no-empty": 0
-  },
-  "env": {
-    "browser": true,
-    "node": true,
-    "es6": true,
-    "mocha": true
-  }
-}
+ecmaFeatures:
+  modules: true
+
+env:
+  es6: true
+  browser: true
+  node: true
+  mocha: true
+
+extends:
+  "eslint:recommended"
+
+rules:
+  no-empty: 0
