--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "gulp clean:tmp",
     "lint": "eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
-    "test": "mocha --compilers js:babel-core/register --recursive --require ./test/setup.js",
+    "test": "mocha --recursive --require ./test/setup.js",
     "test:watch": "npm test -- --watch",
     "check": "npm run lint && npm run test",
     "build": "gulp build:tmp",
