--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "clean": "gulp clean:tmp",
     "lint": "eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
-    "test": "mocha --recursive",
-    "test:watch": "npm test -- --watch",
+    "test": "tape test/**/*-test.js | faucet && npm run lint",
     "check": "npm run lint && npm run test",
     "build": "gulp build:tmp",
     "build:dist": "gulp build:dist",
@@ -44,7 +43,7 @@
   },
   "devDependencies": {
     "eslint": "^1.10.3",
-    "expect": "^1.13.0",
+    "faucet": "0.0.1",
     "github": "^0.2.4",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
@@ -62,9 +61,10 @@
     "inquirer": "^0.12.0",
     "jquery": "^2.1.4",
     "jsdom": "^8.0.0",
-    "mocha": "^2.3.4",
     "rimraf": "^2.4.4",
     "run-sequence": "^1.1.2",
+    "sinon": "^1.17.3",
+    "tape": "^4.4.0",
     "yuidocjs": "^0.10.0"
   }
 }
