--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
   "main": "build/d3.compose-all.js",
   "scripts": {
-    "clean": "gulp clean:tmp",
-    "lint": "eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
-    "test": "tape test/**/*-test.js | faucet && npm run lint",
-    "check": "npm run lint && npm run test",
-    "build": "gulp build:tmp",
-    "build:dist": "gulp build:dist",
-    "build:watch": "gulp build:watch",
+    "pretest": "npm run build:all",
+    "test": "tape test/**/*-test.js | faucet && eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
+    "build:core": "mkdirp build && rollup -c -o build/d3.compose.js -- d3.compose.js",
+    "build:mixins": "mkdirp build && rollup -c -o build/d3.compose-mixins.js -- d3.compose-mixins.js",
+    "build:all": "mkdirp build && rollup -c -o build/d3.compose-all.js -- d3.compose-all.js",
+    "build": "rimraf build && npm run build:core & npm run build:mixins & npm run build:all & gulp build:dist:css",
+    "uglify:core": "cd build && uglifyjs d3.compose.js --source-map d3.compose.min.js.map --comments -c -m -o d3.compose.min.js",
+    "uglify:mixins": "cd build && uglifyjs d3.compose-mixins.js --source-map d3.compose-mixins.min.js.map --comments -c -m -o d3.compose-mixins.min.js",
+    "uglify:all": "cd build && uglifyjs d3.compose-all.js --source-map d3.compose-all.min.js.map --comments -c -m -o d3.compose-all.min.js",
+    "uglify": "npm run uglify:core & npm run uglify:mixins & npm run uglify:all",
     "docs": "rimraf _docs && yuidoc && gulp docs",
-    "preversion": "npm run check",
-    "version": "npm run build:dist && gulp version:bower && git add -A",
+    "preversion": "npm test",
+    "version": "npm run build && npm run uglify && gulp version:bower && git add -A",
     "postversion": "git push && git push --tags",
     "postpublish": "gulp publish:github"
   },
@@ -50,21 +53,19 @@
     "gulp-copy": "0.0.2",
     "gulp-header": "^1.7.1",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.3",
-    "gulp-rollup": "^1.4.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "gulp-zip": "^3.0.2",
     "inquirer": "^0.12.0",
     "jquery": "^2.1.4",
     "jsdom": "^8.0.0",
+    "node-mkdirp": "0.0.1",
     "rimraf": "^2.4.4",
+    "rollup": "^0.25.4",
     "run-sequence": "^1.1.2",
     "sinon": "^1.17.3",
     "tape": "^4.4.0",
+    "uglify-js": "^2.6.1",
     "yuidocjs": "^0.10.0"
   }
 }
