--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "d3.compose",
   "version": "0.15.15",
   "description": "Compose complex, data-driven visualizations from reusable charts and components with d3",
-  "main": "build/d3.compose-all.js",
+  "main": "build/d3.compose.js",
+  "jsnext:main": "index",
   "scripts": {
-    "pretest": "npm run build:all",
-    "test": "tape test/**/*-test.js | faucet && eslint src test d3.compose.js d3.compose-mixins.js d3.compose-all.js",
-    "build:core": "mkdirp build && rollup -c -o build/d3.compose.js -- d3.compose.js",
-    "build:mixins": "mkdirp build && rollup -c -o build/d3.compose-mixins.js -- d3.compose-mixins.js",
-    "build:all": "mkdirp build && rollup -c -o build/d3.compose-all.js -- d3.compose-all.js",
-    "build": "rimraf build && npm run build:core & npm run build:mixins & npm run build:all & gulp build:dist:css",
-    "uglify:core": "cd build && uglifyjs d3.compose.js --source-map d3.compose.min.js.map --comments -c -m -o d3.compose.min.js",
-    "uglify:mixins": "cd build && uglifyjs d3.compose-mixins.js --source-map d3.compose-mixins.min.js.map --comments -c -m -o d3.compose-mixins.min.js",
-    "uglify:all": "cd build && uglifyjs d3.compose-all.js --source-map d3.compose-all.min.js.map --comments -c -m -o d3.compose-all.min.js",
-    "uglify": "npm run uglify:core & npm run uglify:mixins & npm run uglify:all",
+    "pretest": "npm run build",
+    "test": "tape test/**/*-test.js | faucet && eslint src test index.js",
+    "build": "rimraf build && mkdirp build && rollup -c -o build/d3.compose.js -- index.js & gulp css",
+    "uglify": "cd build && uglifyjs d3.compose.js --source-map d3.compose.min.js.map --comments -c -m -o d3.compose.min.js",
     "docs": "rimraf _docs && yuidoc && gulp docs",
     "preversion": "npm test",
     "version": "npm run build && npm run uglify && gulp version:bower && git add -A",
