--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
   "license": "MIT",
   "dependencies": {
     "d3": "^3.5.8",
-    "d3.chart": "^0.2.1"
+    "d3.chart": "^0.3"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.2.0",
+    "eslint": "^1",
     "expect": "^1.13.0",
     "github": "^0.2.4",
     "gulp": "^3.9.0",
